--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-streamlit
+streamlit==1.34.0
 tensorflow-cpu==2.11.0
-scikit-learn
-pandas
-numpy
-joblib
+pandas==2.0.3
+numpy==1.24.3
+scikit-learn==1.3.2
+joblib==1.3.2
 
